--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,23 @@ spring:
     name: ai-chat-bot
   profiles:
     active: local
+server:
+  port: 8080
+  servlet:
+    context-path: /api
+
 langchain4j:
   open-ai:
     chat-model:
       model-name: gpt-4.1-nano
       temperature: 0.7
       api-key: <Api - Key>
+  ollama:
+    chat-model:
+      base-url: http://localhost:11434
+      model-name: gemma3:1b
+      timeout: 60s
+    streaming-chat-model:
+      model-name: gemma3:1b
+      base-url: http://localhost:11434
+      timeout: 60s
